Added sheets integration, reworked UI especially on waitlist page.

--- a/waitList.html
+++ b/waitList.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="general.css">
     <link rel="stylesheet" type="text/css" href="waitList.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Assets/EduVue Favicon.png">
     <title>EduVue</title>
 </head>
 <body>
@@ -15,7 +17,7 @@
             <input type="text" id="name" placeholder="Name" required>
             <input type="email" id="email" placeholder="Email" required>
             <input type="text" id="institution" placeholder="Institution" required>
-            <button type="submit" id="submit-btn">Enter the waitlist</button>
+            <button type="submit" id="submit-btn">Join the waitlist</button>
         </form>
         <div id="success-message" class="hidden">
             <div id="check-mark">&#10003;</div>
@@ -23,6 +25,7 @@
         </div>
     </div>
     <script src="particles.js"></script>
+    <script src="sheets.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
