Changed name of favicon file

--- a/waitList.html
+++ b/waitList.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="general.css">
     <link rel="stylesheet" type="text/css" href="waitList.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="Assets/EduVue Favicon.png">
+    <link rel="icon" type="image/x-icon" href="Assets/EduVue-favicon.png">
     <title>EduVue</title>
 </head>
 <body>
