--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="general.css">
     <link rel="stylesheet" type="text/css" href="landingPage.css">
-    <link rel="icon" type="image/x-icon" href="Assets/EduVue Favicon.png">
+    <link rel="icon" type="image/x-icon" href="Assets/EduVue-favicon.png">
     <title>EduVue</title>
 </head>
 <body>
